--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,3 +39,43 @@ nav {
   top: 0;
   z-index: 100;
 }
+
+/* .image-info {
+  position: 'absolute';
+  top: 0;
+  left: 250*1.5;
+  width: 250*1.5;
+  height: 375*1.5;
+  background-color: 'white';
+  border: '1px solid black';
+  padding: '10px';
+  overflow: 'auto';
+} */
+
+.image-info {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  height: 375px;
+  background-color: white;
+  border: 1px solid black;
+  padding: 10px;
+  overflow: auto;
+  z-index: 1;
+}
+
+.image-info.right {
+  left: 100%;
+}
+
+.image-info.left {
+  right: 100%;
+}
+
+/* @media (min-width: 768px) {
+  .image-info {
+    left: auto;
+    right: 100%;
+    transform: translateX(100%);
+  }
+} */
