--- a/components/Footer.module.css
+++ b/components/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  height: 100px;
+  height: 50px;
   border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
@@ -10,4 +10,5 @@
 .icon {
   width: 24px;
   height: 24px;
+  filter: grayscale(100%);
 }
